--- a/src/css/Blogs.css
+++ b/src/css/Blogs.css
@@ -29,7 +29,7 @@ body {
     border-radius: 8px;
     overflow: hidden;
     width: 400px;
-    height: 550px;
+    height: 100%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: left;
   }
@@ -78,4 +78,24 @@ body {
   }
   .blog-author{
     border: 1px solid #fff;
+  }
+
+  @media(max-width:768px){
+    .blogs-title{
+      font-size: large;
+    }
+    .blog-meta{
+      font-size: medium;
+
+    }
+    .blog-card {
+      width: 330px;
+    }
+    .blogs-container {
+      padding: 20px 12px;
+    }
+    .blogs-grid {
+      justify-content: left;
+    }
+    
   }
