--- a/src/css/ServicesSection2.css
+++ b/src/css/ServicesSection2.css
@@ -4,7 +4,7 @@
     color: #fff;
     padding: 50px 100px; 
     font-family: Arial, sans-serif;
-    height: 100vh;
+    height: 100%;
   }
   
   /* Header styling */
@@ -59,8 +59,6 @@
   }
   
   .eye-image {
-    max-width: 100%;
-    height: auto;
     border-radius: 50%;
   }
   
@@ -78,7 +76,7 @@
     flex: 1;
     max-width: 600px;
   }
-  
+ 
   .services-text2 h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
@@ -116,3 +114,25 @@
     color: #000;
   }
   
+  @media (max-width: 768px){
+    .services-container2{
+     
+    }
+    .services-header2{
+      margin-left: 5%;
+    }
+    .services-graphic2{
+      width: 50px;
+      height: 50px;
+    }
+     .services-text2 h2{
+        font-size: 1.5rem;
+    }
+    .services-text2 p{
+      width: 150px;
+    }
+    .services-text2{
+
+    }
+    
+  }
